fixing alignments of video card product card and remove svg od play and pause

--- a/src/components/BannerVideo/bannerVideo.css
+++ b/src/components/BannerVideo/bannerVideo.css
@@ -50,3 +50,8 @@ h2 {
   color: white;
   font-weight: bold;
 }
+
+.videoCardDiv {
+  display: flex;
+  flex-direction: row;
+}
