--- a/src/components/ProductsCards/productsCard.css
+++ b/src/components/ProductsCards/productsCard.css
@@ -25,15 +25,14 @@
 }
 
 .productDiscrp {
-  /* position: absolute; */
-  /* text-align: calc(100px); */
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
   background: #ffffff;
   margin-top: -1rem;
   border: 1px solid #f2f2f2;
   /* padding-left: 1rem; */
-  line-height: 5px;
+  line-height: 2px;
   width: 10rem;
   border-radius: 0px 0px 8px 8px;
   /* margin-right: -3rem; */
@@ -45,20 +44,23 @@
   margin-left: 1rem;
 }
 .productName {
+  margin-top: -2px;
   margin-left: 1rem;
   font: " Poppins";
   font-weight: 400;
-  font-size: 14px;
+  font-size: 13px;
 }
 .rateAndDiscount {
-  margin-left: 1rem;
+  /* margin-left: 1rem; */
   margin-top: -0.5rem;
   display: flex;
 }
 .mrp {
   text-decoration-line: line-through;
   color: #999999;
-  padding-left: 5px;
+  margin-left: 1rem;
+
+  /* padding-left: 5px; */
   padding-right: 5px;
   font-size: small;
 }
@@ -68,7 +70,8 @@
 }
 
 .newprice {
-  margin-left: 1rem;
+  padding-top: 5px;
+  margin-left: 1.3rem;
   margin-top: 1px;
   font-weight: bold;
 }
